--- a/Nbody Simulation/css/style.css
+++ b/Nbody Simulation/css/style.css
@@ -3,36 +3,42 @@
     padding: 0;
 }
 
-.container{
-    position: "relative"
+.main-container{
+    position: "relative";
 }
 
 .my_canvas{
     position: absolute;
 }
 
-.parameter_panel{
+.parameter_off{
+    display: none;
     position: absolute;
-    right: 0;
-    display: block;
-    min-width: 20%;
-    min-height: 300px;
-    background-color: #00000055;
-    border: 1px solid rgba(255, 255, 255, 0.336);
-    margin: 10px;
-    padding: 8px;
-    border-radius: 12px;
-    z-index: 99999 !important;
-    color: white;
-    font-family: "Playfair Display", serif;
-    /* font-family: "Space Grotesk", sans-serif; */
-    /* font-optical-sizing: auto; */
-    /* font-weight: <weight>;
-    font-style: normal; */
 }
+
+.menu-button{
+    position: absolute;
+    color: white;
+    right: 0;
+    margin: 12px;
+}
+
+.menu-button #menu-button{
+    font-size: 25px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+
+.menu-button #menu-button:hover{
+    transform: rotateZ(90deg);
+}
+
+
 
 .popup_container{
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -106,4 +112,67 @@
 
 .display_none {
     display: none;
+}
+
+.panel-header{
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+}
+
+
+.parameter_panel{
+    z-index: 999 !important;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    min-width: 20vw;
+    max-width: 50%;
+    min-height: 300px;
+    box-sizing: border-box;
+    background-color: #00000055;
+    border: 1px solid rgba(255, 255, 255, 0.336);
+    margin: 10px;
+    padding: 8px;
+    border-radius: 12px;
+    color: white;
+    font-family: "Playfair Display", serif;
+    /* font-family: "Space Grotesk", sans-serif; */
+    /* font-optical-sizing: auto; */
+    /* font-weight: <weight>;
+    font-style: normal; */
+}
+
+#close-button{
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+
+#close-button:hover{
+    transform: rotateZ(90deg);
+}
+
+.input-container input, select{
+    margin-block: 8px;
+}
+
+.input-container{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #303030;
+    padding-bottom: 2px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-block: 10px;
+}
+
+.buttons-container button{
+    font-size: 24px;
+
 }
