--- a/Nbody Simulation/css/style.css
+++ b/Nbody Simulation/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Poppins", sans-serif;
 }
 
 .main-container{
@@ -56,7 +57,8 @@
     z-index: 99999 !important;
     text-align: center;
     color: white;
-    font-family: "Playfair Display", serif;
+    font-family: "Poppins", sans-serif;
+    /* font-family: "Playfair Display", serif; */
     /* font-family: "Space Grotesk", sans-serif; */
     /* font-optical-sizing: auto; */
     /* font-weight: <weight>;
@@ -73,7 +75,8 @@
     font-weight: bold;
     padding-inline: 8px;
     color: white;
-    font-family: "Space Grotesk", sans-serif; 
+    /* font-family: "Space Grotesk", sans-serif;  */
+    font-family: "Poppins", sans-serif;
 }
 
 .new_body_popup #color{
@@ -90,7 +93,8 @@
     padding-block: 12px;
     margin-top: 14px;
     margin-bottom: 5px;
-    font-family: "Space Grotesk", sans-serif; 
+    /* font-family: "Space Grotesk", sans-serif;  */
+    font-family: "Poppins", sans-serif;
     text-transform: uppercase;
     font-weight: 900;
     background-color: transparent;
@@ -137,7 +141,8 @@
     padding: 8px;
     border-radius: 12px;
     color: white;
-    font-family: "Playfair Display", serif;
+    font-family: "Poppins", sans-serif;
+    /* font-family: "Playfair Display", serif; */
     /* font-family: "Space Grotesk", sans-serif; */
     /* font-optical-sizing: auto; */
     /* font-weight: <weight>;
@@ -163,7 +168,8 @@
     justify-content: space-between;
     border-bottom: 1px solid #303030;
     padding-bottom: 2px;
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
+    font-family: "Poppins", sans-serif;
 }
 
 .buttons-container {
@@ -173,6 +179,15 @@
 }
 
 .buttons-container button{
-    font-size: 24px;
+    font-size: 20px;
+    font-weight: bold;
+}
 
+.notes-p{
+    text-align: center;
+    font-size: 14px;
+    color: rgb(231, 231, 231);
+    font-family: "Poppins", sans-serif;
+    /* font-size: 'Courier New', Courier, monospace; */
+    font-weight: 600;
 }
